# VendingMachine

./: README.md
Vending Machine/: CMakeLists.txt  main.cpp
Vending Machine/Data/: dataCoins  dataProducts  testRepoDataCoins  testRepoDataProducts  testVendingMachineDataCoins  testVendingMachineDataProducts
Vending Machine/Domain/: Product.cpp  Product.h
Vending Machine/Repository/: Repo.h  RepoFile.h
Vending Machine/Repository/Collection/: Collection.h
Vending Machine/Repository/DynamicVector/: DynamicVector.h
Vending Machine/Service/: VendingMachine.cpp  VendingMachine.h
Vending Machine/Tests/: TestCollection.cpp  TestCollection.h  TestProduct.cpp  TestProduct.h  TestRepo.cpp  TestRepo.h  TestVendingMachine.cpp  TestVendingMachine.h  TestsDynamicVector.cpp  TestsDynamicVector.h
Vending Machine/UI/: Ui.cpp  Ui.h
